feat: implementado DTOs e filtro por título na API de tarefas